# glsmrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml  publish.yml
shaders/: dummy.frag  dummy.vert
src/: attributes.rs  gl.rs  lib.rs  mesh.rs  texture.rs  util.rs
