[package]
name = "glsmrs"
version = "0.1.0"
authors = ["Roman Kotelnikov <roman.kotelnikov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WebGlProgram',
  'WebGlShader',
  'WebGlFramebuffer',
]
