[package]
name = "glsmrs"
version = "0.1.1"
authors = ["Roman Kotelnikov <roman.kotelnikov@gmail.com>"]
edition = "2018"
description = "Opinionated thin wrapper over WebGL 1.0 API"
license = "MIT"
repository = "https://github.com/wg-romank/glsmrs"
keywords = ["wasm", "webgl", "shaders", "glsl", "webassembly"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2.60"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WebGlProgram',
  'WebGlShader',
  'WebGlFramebuffer',
  'HtmlCanvasElement',
  'Window',
  'Document',
]
